// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddressResults/> should render no results 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  border-color: transparent;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  margin-bottom: 1rem;
  padding: 0.625rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #fff;
  background: #005994;
  border-color: #003a61;
}

.c3> *:last-child {
  margin-bottom: 0;
}

.c4 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c4:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c4[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c4[aria-pressed="true"]:not([disabled]):hover,
.c4[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c4[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c4[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c7 {
  margin-bottom: 1rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c10 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c10:not([disabled]):hover,
.c10:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c10:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c10[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c10[aria-pressed="true"]:not([disabled]):hover,
.c10[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c10[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c10[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c10 + .c9 {
  margin-left: 1rem;
}

.c11 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c11:not([disabled]):hover,
.c11:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c11:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c11[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c11[aria-pressed="true"]:not([disabled]):hover,
.c11[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c11[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c11[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c11 + .c9 {
  margin-left: 1rem;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

@media print {
  .c6 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          Nous n’avons pas trouvé de résultat pour votre recherche.
        </div>
        <button
          aria-pressed="false"
          class="c4"
        >
          Posez votre question
        </button>
        <div
          class="c0"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <h3
                class="c7"
              >
                Avez-vous trouvé la réponse à votre question ?
              </h3>
              <p
                class="c8"
              >
                <button
                  aria-pressed="false"
                  class="c9 c10"
                >
                  Non
                </button>
                <button
                  aria-pressed="false"
                  class="c9 c11"
                >
                  Oui
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AddressResults/> should render results 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c8 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  border-color: transparent;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c9 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

.c7 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c7:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c7[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c7[aria-pressed="true"]:not([disabled]):hover,
.c7[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c7[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c7[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c10 {
  margin-bottom: 1rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c13 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c13:not([disabled]):hover,
.c13:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c13:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c13[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c13[aria-pressed="true"]:not([disabled]):hover,
.c13[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c13[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c13[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c13 + .c12 {
  margin-left: 1rem;
}

.c14 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c14:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c14[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c14[aria-pressed="true"]:not([disabled]):hover,
.c14[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c14[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c14[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c14 + .c12 {
  margin-left: 1rem;
}

.c3 {
  font-size: 1rem;
}

.c4 {
  display: block;
  font-size: 0.9em;
  line-height: 1.5;
  margin: 1rem 0;
}

.c4:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: rgba(100,100,100,0.9);
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4:visited {
  color: rgba(100,100,100,0.8);
}

.c5 {
  font-size: 0.9em;
  margin-top: 0.25em;
  margin-bottom: 0.5em;
  line-height: 1.5;
}

.c6 {
  font-size: 0.9em;
  margin-top: 0.25em;
  margin-bottom: 0.5em;
  line-height: 1.5;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c8 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c2 {
    border: none;
    padding: 0 5pt;
  }
}

@media print {
  .c9 {
    border: none;
    padding: 0 5pt;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <ul
          class="card-wrapper"
        >
          <li
            class="card"
          >
            <strong
              class="c3"
            >
              Bureau des légendes
            </strong>
            <a
              class="c4"
              href="https://www.openstreetmap.org/?mlat=4&mlon=44&zoom=16"
            >
              adresse inconnue
              <br />
              00700
               
              Partout
            </a>
            <p
              class="c5"
            >
              Tél: 
              <a
                href="tel:+00 000 000 000"
              >
                +00 000 000 000
              </a>
            </p>
            <a
              class="c6"
              href="mailto:email"
            >
              email
            </a>
          </li>
        </ul>
        <button
          aria-pressed="false"
          class="c7"
        >
          Posez votre question
        </button>
        <div
          class="c0"
        >
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              <h3
                class="c10"
              >
                Avez-vous trouvé la réponse à votre question ?
              </h3>
              <p
                class="c11"
              >
                <button
                  aria-pressed="false"
                  class="c12 c13"
                >
                  Non
                </button>
                <button
                  aria-pressed="false"
                  class="c12 c14"
                >
                  Oui
                </button>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
